--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -4,7 +4,7 @@
 <h1>About</h1>
 <p><img alt="" height="199" src="/images/小貓咪.jpg" width="211"/></p>
 <p>此內容管理系統以 <a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> 作為 submodule 運作, 可以選定對應的版本運作, cmsimde 可以持續改版, 不會影響之前設為 submodule, 使用舊版 cmsimde 模組的內容管理相關運作.</p>
-<h2><span style="color: #ffff00;">利用 cmsimde 建立靜態網誌方法:</span></h2>
+<h2><span style="color: #ffff00;">利用 cmsimde 建立靜態網誌方法</span></h2>
 <p>1. 在 github 建立倉儲, git clone 到近端</p>
 <p>2. 參考 <a href="https://github.com/mdecourse/newcms">https://github.com/mdecourse/newcms</a>, 加入除了 cmsimde 目錄外的所有內容</p>
 <p>以 git submodule add <a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> cmsimde</p>
@@ -50,7 +50,7 @@
 <p><span>Git installation and setup.</span></p>
 <p><span>Git getting started.</span></p>
 <p><span>Commits and remote git.</span></p>
-<h3><span>Github.</span></h3>
+<h3><span>Github</span></h3>
 <p><span>Login to your gm email account and download<span> </span><a href="https://drive.google.com/file/d/1vnkDLW1cg8hKEMUdjDstvWqiS4R1n3IC/view?usp=sharing">GithubPrimer.pdf</a></span></p>
 <p><span>Login to your gm email account and download<span> </span><a href="https://drive.google.com/file/d/18MiM_d95ustohAqoUfx-gc-2dUE9Av0n/view?usp=sharing">ConflictsGUIToolAdvGit.pdf</a></span></p>
 <p><span></span></p>
@@ -79,33 +79,202 @@
 <p><span><img alt="" height="563" src="/images/IMG_6248.JPG" width="422"/><img alt="" height="533" src="/images/IMG_6249.JPG" width="400"/><img alt="" height="533" src="/images/IMG_6250.JPG" width="400"/><img alt="" height="533" src="/images/IMG_6251.JPG" width="400"/></span></p>
 <p><span></span></p>
 <div>
-<div class="syntaxhighlighter py" id="highlighter_906297">
-<table border="0" cellpadding="0" cellspacing="0">
-<tbody>
-<tr>
-<td class="code">
+<div class="syntaxhighlighter py" id="highlighter_906297"></div>
+</div>
+<p><br/><br/></p>
 <h1 class="container">課程進度</h1>
-<p><img alt="Screaming My Neighbor Totoro GIF by O&amp;O, Inc - Find &amp; Share on GIPHY" src="https://media0.giphy.com/media/l41m3G139gE7e3JXq/source.gif"/></p>
-</td>
-</tr>
-</tbody>
-</table>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<br/><br/><br/><br/>w1
+<p>建立blogger</p>
+<p>課程小單字</p>
+<div class="kvgmc6g5 cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
+<div dir="auto">1 super computer 超級電腦</div>
+<div dir="auto">2pc=person computer 個人電腦 
+<div dir="auto">3mainframe 伺服器主機</div>
+<div dir="auto">4 server 伺服器 (虛擬 實體)</div>
+<div dir="auto">5 mobile phone 手機</div>
+</div>
+<div dir="auto">6 microcontroller 微控制器</div>
+<div dir="auto"></div>
+</div>
+<div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
+<div dir="auto">Port 埠號</div>
+<div dir="auto">DHCP動態網路位置</div>
+</div>
+<p></p>
+<div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
+<h2 dir="auto">w2</h2>
+<p><span>課程小筆記</span></p>
+<div class="kvgmc6g5 cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
+<div dir="auto">IPv4 version 4 IP 四個區段,用.隔開</div>
+<div dir="auto">IPv6 version 6 IP 八個區段,用:隔開</div>
+<div dir="auto">[2001:288:6004:17::53]:3128 140.130.17.53:3128</div>
+<div dir="auto">[2001:288:6004:17::42]:3128 140.130.17.53:254(系gateway通道)</div>
+<div dir="auto">[2001:288:6004:17::17]:3128 140.130.1.*(校主幹)</div>
+<div dir="auto">[2001:288:6004:17::7]:3128</div>
+<div dir="auto">-----------------------------------------------------------------------------------------------------------------</div>
+<div dir="auto">課程小單字</div>
+<div dir="auto">tcp/ip==trandmision control protocol/internet protocol</div>
+</div>
+<div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
+<div dir="auto">inter-net==inter-national(國際)</div>
+</div>
+<div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
+<div dir="auto">(網際,inter+networt)</div>
+</div>
+<div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
+<div dir="auto">protocal 協定
+<div dir="auto">microscope 顯微鏡</div>
+<div dir="auto">telescope 望遠鏡
+<div dir="auto">
+<div dir="auto">trasmit 傳輸</div>
+<div dir="auto">data 資料</div>
+</div>
+<div dir="auto">packet 封包</div>
 </div>
 </div>
-<h2>w1</h2>
-<h2>w2</h2>
-<h2>w3</h2>
-<h2>w4</h2>
-<h2>w5</h2>
-<h2>w6</h2>
-<h2>w7</h2>
-<h2>w8</h2>
-<h2>w9</h2>
+<div dir="auto"></div>
+<div dir="auto">control 控制
+<div dir="auto">macro 巨(比原子(atom)大)</div>
+<div dir="auto">atomic bomb 原子彈中華電信 dns. server. dns==domain name server 符號名稱伺服器</div>
+</div>
+<div dir="auto">version 版本(短時間)</div>
+<div dir="auto">edition 版本(長時間)</div>
+<div dir="auto">router 路由器</div>
+<div dir="auto">route 路徑</div>
+<div dir="auto">remote login 遠端登入</div>
+<div dir="auto">
+<div dir="auto">micro 微</div>
+</div>
+<div dir="auto"></div>
+</div>
+</div>
+<p><br/><br/><br/><br/><br/>w3<span>建立可攜式環境</span></p>
+<p>建立可攜式環境</p>
+<p>為了讓工程師可以在不同的 Windows 10 64 位元電腦上管理 CMSiMDE 網際內容管理系統, 因此需要 Python 解譯環境以及一個文字檔案的編輯器.</p>
+<p>這裡所安裝的 Python 解譯器選擇由 C 所編寫的 CPython, 可以從<span> </span><a href="https://www.python.org/">https://www.python.org/</a>  下載安裝. 但是在此我們要將 Python 解譯系統配置在 USB 隨身碟上, 使用者可以隨身攜帶, 一旦配置完成後, 可以在任何一台 Windows 10 64 位元的筆電或電腦上執行 Python 或 C 程式.</p>
+<p>可攜 Python 程式環境的建立步驟:</p>
+<p>安裝 Python 套件時, 不要安裝 pip, 之後將 Python38 目錄複製到 data 目錄中, 然後建立 start.bat 指定使用可攜系統中的 Python, 之後再利用 g<a href="https://www.google.com/url?sa=t&amp;rct=j&amp;q=&amp;esrc=s&amp;source=web&amp;cd=1&amp;ved=2ahUKEwivpbG6gfHoAhURrZQKHUT8ARcQFjAAegQIAhAB&amp;url=https%3A%2F%2Fbootstrap.pypa.io%2Fget-pip.py&amp;usg=AOvVaw0zKVO_zW0nkF7s0zdjWFNj">et-pip.py,</a><span> </span>以命令列中的 python get-pip.py 安裝 pip.</p>
+<p>可攜 Tiny C 程式環境的建立步驟:</p>
+<p>從<span> </span><a href="https://bellard.org/tcc/">https://bellard.org/tcc/</a><span> </span>下載 Tiny C, 將 tcc 解開壓縮後放到 data 目錄中. 然後修改 wscite 目錄中的 cpp.properties, 使用 Tiny C 類解譯 .c 程式.</p>
+<p>選用的文字編輯器:<span> </span><a href="https://www.scintilla.org/SciTE.html">https://www.scintilla.org/SciTE.html</a></p>
+<p>建立完成的可攜程式環境:</p>
+<p>下載<span> </span><a href="https://drive.google.com/open?id=1xDTDfcHU18ipqZNbOufMkSZqibqNeL2T">wcmj2020_tool.7z</a>, 檔案大小為 435 MB, 解開壓縮後為 1.8 GB (其中包括 Mypaint, Dia 與 OBS 等)</p>
+<p>將 wcmj2020_tool.7z 解壓縮到隨身碟或電腦硬碟中, 將 home 與 home_ipv6 目錄中的 .gitconfig user.name 與 user.email 改為自己的 Github 帳號與 email 後, 利用 start.bat 啟動可攜系統, 利用 stop.bat 關閉可攜系統.</p>
+<p><br/><br/><br/>w4<span>建網站</span></p>
+<div class="kvgmc6g5 cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
+<div dir="auto">建網站</div>
+<div dir="auto">此內容管理系統以 https:..github.com.mdecourse.cmsimde 作為 submodule 運作, 可以選定對應的版本運作, cmsimde 可以持續改版, 不會影響之前設為 submodule, 使用舊版 cmsimde 模組的內容管理相關運作.</div>
+</div>
+<div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
+<div dir="auto">利用 cmsimde 建立靜態網誌方法:</div>
+</div>
+<div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
+<div dir="auto">在 github 建立倉儲, git clone 到近端</div>
+<div dir="auto">參考https:..github.com.mdecourse.newcms, 加入除了 cmsimde 目錄外的所有內容</div>
+<div dir="auto">以 git submodule add https:..github.com.mdecourse.cmsimde cmsimde</div>
+</div>
+<div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
+<div dir="auto">建立 cmsimde 目錄, 並從 github 取下子模組內容.</div>
+</div>
+<div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
+<div dir="auto">3.在近端維護時, 更換目錄到倉儲中的 cmsimde, 以 python wsgi.py 啟動近端網際伺服器.</div>
+</div>
+<div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
+<div dir="auto">動態內容編輯完成後, 以 generate_pages 轉為靜態內容, 以 git add commit 及 push 將內容推到遠端.</div>
+</div>
+<div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
+<div dir="auto">之後若要以 git clone 取下包含 submodule 的所有內容, 執行:</div>
+<div dir="auto">git clone --recurse-submodules https:..github.com.mdecourse.newcms.git</div>
+</div>
+<h3>w5</h3>
+<div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
+<div dir="auto">筆記</div>
+<div dir="auto">firmwarre 韌體</div>
+<div dir="auto"></div>
+</div>
+<div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
+<div dir="auto">
+<div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql"></div>
+<div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
+<div dir="auto">software 軟體</div>
+<div dir="auto">hardware 硬體
+<div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
+<div dir="auto"></div>
+<div dir="auto">terminology 專業術語</div>
+<div dir="auto">particular 特別</div>
+</div>
+<div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
+<div dir="auto">technical 技術</div>
+</div>
+<div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
+<div dir="auto">
+<div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
+<div dir="auto">application 應用</div>
+</div>
+</div>
+</div>
+</div>
+<div dir="auto">
+<div dir="auto">command wundow 命令視窗</div>
+<div dir="auto">submodule 子模組</div>
+<div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
+<div dir="auto">machine language 機器語言</div>
+</div>
+<div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
+<div dir="auto">URL:Uniform Resourse Locator 統一資源定位</div>
+<div dir="auto">-----------------------------------------------------------------------------------------------------------------</div>
+<div dir="auto">
+<div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
+<div dir="auto">程式令:</div>
+</div>
+<div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
+<div dir="auto">Y:←指y槽</div>
+<div dir="auto">Y:\ ←表示Y槽的root根目錄</div>
+<div dir="auto">&gt; 為回應符號(prormptsign)</div>
+<div dir="auto">\ 為blackslash 反斜線</div>
+<div dir="auto">dir為顯示目錄內容的指令</div>
+<div dir="auto">cd tmp 表示change directory 到指定的目錄</div>
+<div dir="auto">git為分散式版次管理的指令名稱</div>
+<div dir="auto">git clone表示要使用git對遠端的倉儲進行clone。</div>
+<div dir="auto"></div>
+</div>
+<div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
+<div dir="auto"></div>
+</div>
+<div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
+<div dir="auto">課堂小單字</div>
+<div dir="auto">shell 殼</div>
+<div dir="auto">interface 介面</div>
+<div dir="auto">device 物件</div>
+<div dir="auto">graphics 圖形</div>
+<div dir="auto"></div>
+<h3 dir="auto">w6</h3>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+<h3>w7</h3>
+<h3>w8</h3>
+<h3>w9</h3>
 <p><span>學習這幾周下來之心得</span></p>
 <p><span>w1教我們如何建立blogger</span></p>
 <p><span>w2-4則是教我們如何用git指令建立cmsimde網站，並如何維護</span></p>
 <p><span>而w6-w9則是教學如何開直播</span></p>
-<h2><span>w10如何用ssh</span></h2>
+<h3><span>w10如何用ssh</span></h3>
 <p>由於在電腦教室時採用純 IPv6 協定上網, 因此為了能夠在近端將倉儲改版資料推送到目前只接受 IPv4 協定連線的 github, 以下除了將原本以 https 對 github 連線, 改為以 ssh 協定連線外, 在 Windows 環境下必須利用 putty 與 plink, 設定 putty 格式的 .ppk 以及能夠同時支援 IPv4 與 IPv6 的代理主機.</p>
 <p>設定步驟如下:</p>
 <p>1. 下載 Putty 工具組</p>
@@ -654,6 +823,6 @@
 </tr>
 </tbody>
 </table>
-<p>.....</p>
+<p></p>
 </div>
 </div>
