--- a/content/w2.html
+++ b/content/w2.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html>
         <head>
-        <title>CMSiMDE</title>
+        <title>50833106Network Management</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='有關本網站.html'>有關本網站</a><li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li><a href='利用 cmsimde 建立靜態網誌方法.html'>利用 cmsimde 建立靜態網誌方法</a><li><a href='Develop.html'>Develop</a><li class='has-children'><a href='Cmsimde.html'>Cmsimde</a><ul class='dropdown'><li><a href='如何使用 CMSiMDE.html'>如何使用 CMSiMDE</a></li></li></ul></ul><li class='has-children'><a href='主題.html'>主題</a><ul class='dropdown'><li><a href='Github.html'>Github</a></li></ul><li class='has-children'><a href='上課內容重點筆記.html'>上課內容重點筆記</a><ul class='dropdown'><li><a href='proxy.html'>proxy</a><li><a href='NAT.html'>NAT</a><li class='has-children'><a href='電腦之硬體設備.html'>電腦之硬體設備</a><ul class='dropdown'><li><a href='CPU.html'>CPU</a><li><a href='記憶體RAM.html'>記憶體RAM</a><li><a href='硬碟.html'>硬碟</a></li></ul><li class='has-children'><a href='IPv4與IPv6之差別.html'>IPv4與IPv6之差別</a><ul class='dropdown'><li><a href='IPv4.html'>IPv4</a><li><a href='IPv6.html'>IPv6</a></li></ul><li><a href='紙本筆記.html'>紙本筆記</a></li></ul><li class='has-children'><a href='課程進度.html'>課程進度</a><ul class='dropdown'><li><a href='w1.html'>w1</a><li><a href='w2.html'>w2</a><li><a href='w3.html'>w3</a><li><a href='w4.html'>w4</a><li><a href='w5.html'>w5</a><li><a href='w6.html'>w6</a><li><a href='w7.html'>w7</a><li><a href='w8.html'>w8</a><li><a href='w9.html'>w9</a><li><a href='w10如何用ssh.html'>w10如何用ssh</a><li><a href='W13.html'>W13</a></li>
+                     <li><a href='有關本網站.html'>有關本網站</a><li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li><a href='利用 cmsimde 建立靜態網誌方法.html'>利用 cmsimde 建立靜態網誌方法</a><li><a href='Develop.html'>Develop</a><li class='has-children'><a href='Cmsimde.html'>Cmsimde</a><ul class='dropdown'><li><a href='如何使用 CMSiMDE.html'>如何使用 CMSiMDE</a></li></li></ul></ul><li class='has-children'><a href='主題.html'>主題</a><ul class='dropdown'><li><a href='Github.html'>Github</a></li></ul><li class='has-children'><a href='上課內容重點筆記.html'>上課內容重點筆記</a><ul class='dropdown'><li><a href='proxy.html'>proxy</a><li><a href='NAT.html'>NAT</a><li class='has-children'><a href='電腦之硬體設備.html'>電腦之硬體設備</a><ul class='dropdown'><li><a href='CPU.html'>CPU</a><li><a href='記憶體RAM.html'>記憶體RAM</a><li><a href='硬碟.html'>硬碟</a></li></ul><li class='has-children'><a href='IPv4與IPv6之差別.html'>IPv4與IPv6之差別</a><ul class='dropdown'><li><a href='IPv4.html'>IPv4</a><li><a href='IPv6.html'>IPv6</a></li></ul><li><a href='紙本筆記.html'>紙本筆記</a></li></ul><li class='has-children'><a href='課程進度.html'>課程進度</a><ul class='dropdown'><li class='has-children'><a href='w2.html'>w2</a><ul class='dropdown'><li><a href='w5.html'>w5</a><li><a href='w6.html'>w6</a><li><a href='w7.html'>w7</a><li><a href='w8.html'>w8</a><li><a href='w9.html'>w9</a><li><a href='w10如何用ssh.html'>w10如何用ssh</a></li></ul><li><a href='W13.html'>W13</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,8 +154,91 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w1 << <a href='w1.html'>Previous</a> <a href='w3.html'>Next</a> >> w3<br /><h1>w2</h1>
-<br />w1 << <a href='w1.html'>Previous</a> <a href='w3.html'>Next</a> >> w3</div>
+    <div id="tipue_search_content">課程進度 << <a href='課程進度.html'>Previous</a> <a href='w5.html'>Next</a> >> w5<br /><h1>w2</h1>
+<p><span>課程小筆記</span></p>
+<div class="kvgmc6g5 cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
+<div dir="auto">IPv4 version 4 IP 四個區段,用.隔開</div>
+<div dir="auto">IPv6 version 6 IP 八個區段,用:隔開</div>
+<div dir="auto">[2001:288:6004:17::53]:3128 140.130.17.53:3128</div>
+<div dir="auto">[2001:288:6004:17::42]:3128 140.130.17.53:254(系gateway通道)</div>
+<div dir="auto">[2001:288:6004:17::17]:3128 140.130.1.*(校主幹)</div>
+<div dir="auto">[2001:288:6004:17::7]:3128</div>
+<div dir="auto">-----------------------------------------------------------------------------------------------------------------</div>
+<div dir="auto">課程小單字</div>
+<div dir="auto">tcp/ip==trandmision control protocol/internet protocol</div>
+</div>
+<div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
+<div dir="auto">inter-net==inter-national(國際)</div>
+</div>
+<div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
+<div dir="auto">(網際,inter+networt)</div>
+</div>
+<div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
+<div dir="auto">protocal 協定
+<div dir="auto">microscope 顯微鏡</div>
+<div dir="auto">telescope 望遠鏡
+<div dir="auto">
+<div dir="auto">trasmit 傳輸</div>
+<div dir="auto">data 資料</div>
+</div>
+<div dir="auto">packet 封包</div>
+</div>
+</div>
+<div dir="auto"></div>
+<div dir="auto">control 控制
+<div dir="auto">macro 巨(比原子(atom)大)</div>
+<div dir="auto">atomic bomb 原子彈中華電信 dns. server. dns==domain name server 符號名稱伺服器</div>
+</div>
+<div dir="auto">version 版本(短時間)</div>
+<div dir="auto">edition 版本(長時間)</div>
+<div dir="auto">router 路由器</div>
+<div dir="auto">route 路徑</div>
+<div dir="auto">remote login 遠端登入</div>
+<div dir="auto">
+<div dir="auto">micro 微</div>
+</div>
+<div dir="auto"></div>
+</div>
+</div>
+<p><br/><br/><br/><br/><br/>w3<span>建立可攜式環境</span></p>
+<p>建立可攜式環境</p>
+<p>為了讓工程師可以在不同的 Windows 10 64 位元電腦上管理 CMSiMDE 網際內容管理系統, 因此需要 Python 解譯環境以及一個文字檔案的編輯器.</p>
+<p>這裡所安裝的 Python 解譯器選擇由 C 所編寫的 CPython, 可以從<span> </span><a href="https://www.python.org/">https://www.python.org/</a>  下載安裝. 但是在此我們要將 Python 解譯系統配置在 USB 隨身碟上, 使用者可以隨身攜帶, 一旦配置完成後, 可以在任何一台 Windows 10 64 位元的筆電或電腦上執行 Python 或 C 程式.</p>
+<p>可攜 Python 程式環境的建立步驟:</p>
+<p>安裝 Python 套件時, 不要安裝 pip, 之後將 Python38 目錄複製到 data 目錄中, 然後建立 start.bat 指定使用可攜系統中的 Python, 之後再利用 g<a href="https://www.google.com/url?sa=t&amp;rct=j&amp;q=&amp;esrc=s&amp;source=web&amp;cd=1&amp;ved=2ahUKEwivpbG6gfHoAhURrZQKHUT8ARcQFjAAegQIAhAB&amp;url=https%3A%2F%2Fbootstrap.pypa.io%2Fget-pip.py&amp;usg=AOvVaw0zKVO_zW0nkF7s0zdjWFNj">et-pip.py,</a><span> </span>以命令列中的 python get-pip.py 安裝 pip.</p>
+<p>可攜 Tiny C 程式環境的建立步驟:</p>
+<p>從<span> </span><a href="https://bellard.org/tcc/">https://bellard.org/tcc/</a><span> </span>下載 Tiny C, 將 tcc 解開壓縮後放到 data 目錄中. 然後修改 wscite 目錄中的 cpp.properties, 使用 Tiny C 類解譯 .c 程式.</p>
+<p>選用的文字編輯器:<span> </span><a href="https://www.scintilla.org/SciTE.html">https://www.scintilla.org/SciTE.html</a></p>
+<p>建立完成的可攜程式環境:</p>
+<p>下載<span> </span><a href="https://drive.google.com/open?id=1xDTDfcHU18ipqZNbOufMkSZqibqNeL2T">wcmj2020_tool.7z</a>, 檔案大小為 435 MB, 解開壓縮後為 1.8 GB (其中包括 Mypaint, Dia 與 OBS 等)</p>
+<p>將 wcmj2020_tool.7z 解壓縮到隨身碟或電腦硬碟中, 將 home 與 home_ipv6 目錄中的 .gitconfig user.name 與 user.email 改為自己的 Github 帳號與 email 後, 利用 start.bat 啟動可攜系統, 利用 stop.bat 關閉可攜系統.</p>
+<p><br/><br/><br/>w4<span>建網站</span></p>
+<div class="kvgmc6g5 cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
+<div dir="auto">建網站</div>
+<div dir="auto">此內容管理系統以 https:..github.com.mdecourse.cmsimde 作為 submodule 運作, 可以選定對應的版本運作, cmsimde 可以持續改版, 不會影響之前設為 submodule, 使用舊版 cmsimde 模組的內容管理相關運作.</div>
+</div>
+<div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
+<div dir="auto">利用 cmsimde 建立靜態網誌方法:</div>
+</div>
+<div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
+<div dir="auto">在 github 建立倉儲, git clone 到近端</div>
+<div dir="auto">參考https:..github.com.mdecourse.newcms, 加入除了 cmsimde 目錄外的所有內容</div>
+<div dir="auto">以 git submodule add https:..github.com.mdecourse.cmsimde cmsimde</div>
+</div>
+<div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
+<div dir="auto">建立 cmsimde 目錄, 並從 github 取下子模組內容.</div>
+</div>
+<div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
+<div dir="auto">3.在近端維護時, 更換目錄到倉儲中的 cmsimde, 以 python wsgi.py 啟動近端網際伺服器.</div>
+</div>
+<div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
+<div dir="auto">動態內容編輯完成後, 以 generate_pages 轉為靜態內容, 以 git add commit 及 push 將內容推到遠端.</div>
+</div>
+<div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
+<div dir="auto">之後若要以 git clone 取下包含 submodule 的所有內容, 執行:</div>
+<div dir="auto">git clone --recurse-submodules https:..github.com.mdecourse.newcms.git</div>
+</div>
+<br />課程進度 << <a href='課程進度.html'>Previous</a> <a href='w5.html'>Next</a> >> w5</div>
         
     <!-- footer -->
       <div class="container">
